--- a/ForAnimalsWithLove/Views/Administrator/AddBooking.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AddBooking.cshtml
@@ -1,5 +1,82 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@using ForAnimalsWithLove.ViewModels.Admins;
+@model AdminBookingModel
+
 @{
+	ViewBag.Title = "Добави Хотелско настаняване";
 }
+<head>
+	<!-- Bootstrap core CSS -->
+	<link href="~/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+	<!-- style CSS -->
+	<link href="~/css/style.css" rel="stylesheet">
+	<!-- plugins CSS -->
+	<link href="~/css/plugins.css" rel="stylesheet">
+	<!-- Colors CSS -->
+	<link href="~/styles/maincolors.css" rel="stylesheet">
+</head>
+
+<div class="page pb-0">
+	<div class="section-heading" data-aos="zoom-in">
+		<h3>@ViewBag.Title</h3>
+	</div>
+</div>
+
+
+<div class="row">
+
+	<form method="post">
+
+		<div class="row">
+			<div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
+				<div class="form-group">
+					<label asp-for="StartDate"></label>
+					<input asp-for="StartDate" class="form-control">
+					<span asp-validation-for="StartDate" class="small text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="EndDate"></label>
+					<input asp-for="EndDate" class="form-control">
+					<span asp-validation-for="EndDate" class="small text-danger"></span>
+				</div>
+				<div class="form-group">
+					<label asp-for="Days"></label>
+					<input asp-for="Days" class="form-control">
+					<span asp-validation-for="Days" class="small text-danger"></span>
+				</div>
+				<div class="mb-3">
+					<label asp-for="@Model.HotelId" class="form-label-add-edit">Хотели</label>
+					<select asp-for="@Model.HotelId" class="form-control" aria-required="true">
+						@foreach (var type in Model.Hotels)
+						{
+							<option value="@type.Id">@type.Name</option>
+						}
+					</select>
+					<span asp-validation-for="@Model.HotelId" class="text-danger"></span>
+				</div>
+			</div>
+		</div>
+
+
+		<div class="text-center">
+			<button class="btn btn-primary mt-3" type="submit" value="AddEducation">Запази</button>
+		</div>
+
+	</form>
+
+</div>
+
+
+<!-- Bootstrap core & Jquery -->
+<script src="~/vendor/jquery/jquery.min.js"></script>
+<script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+<!-- Custom Js -->
+<script src="~/js/custom.js"></script>
+<script src="~/js/plugins.js"></script>
+<!-- Prefix free -->
+<script src="~/js/prefixfree.min.js"></script>
+
+@section Scripts {
+	<partial name="_ValidationScriptsPartial" />
+}
+
+
