implement add search home

--- a/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/AllAnimals.cshtml
@@ -87,23 +87,12 @@
                                         <!-- Buttons -->
                                         <!-- Buttons -->
                                         <div class="text-center">
-                                            <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="EditAnimal" asp-route-id="@animal.Id">Промени/Добави</a>
+                                            <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="EditAnimal" asp-route-id="@animal.Id">Промени</a>
                                         </div>
                                         <div class="text-center">
                                             <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AnimalDetails" asp-route-id="@animal.Id">Детайли</a>
                                         </div>
-                                        <div class="text-center">
-                                            <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AddHealthRecord" asp-route-id="@animal.Id"> + Добави здравно досие</a>
-                                        </div>
-                                        <div class="text-center">
-                                            <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AddGrooming" asp-route-id="@animal.Id"> + Добави Grooming услуги</a>
-                                        </div>
-                                        <div class="text-center">
-                                            <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AddEducation" asp-route-id="@animal.Id"> + Добави обучение</a>
-                                        </div>
-                                        <div class="text-center">
-                                            <a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AddBooking" asp-route-id="@animal.Id"> + Добави хотелско настаняване</a>
-                                        </div>
+                                       
                                     </div>
                                 </div>
                                 <!-- /thumbnail -->
