--- a/ForAnimalsWithLove/Views/Administrator/EditAnimal.cshtml
+++ b/ForAnimalsWithLove/Views/Administrator/EditAnimal.cshtml
@@ -2,6 +2,7 @@
 @model AdminAnimalModel
 
 @{
+	var animal = Model;
 	ViewBag.Title = "Промени информация";
 }
 <head>
@@ -92,9 +93,9 @@
 			<div class="text-center">
 					<button class="btn btn-primary mt-3" type="submit" value="EditAnimal">Запази</button>
 			</div>
-
+				
 		</form>
-
+		
 	</div>
 </div>
 
