--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -1,11 +1,23 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using ForAnimalsWithLove.Data.Service.Interfaces;
+@using ForAnimalsWithLove.Infrastructure.Extensions;
+@using Microsoft.AspNetCore.Identity
 @using ForAnimalsWithLove.Data.Models
+@inject IAdminService AdminService
+@{
+	bool isAdmin = await AdminService.AdminExistByUserIdAsync(this.User.GetId());
+}
+@inject IOwnerService OwnerService
+@{
+	bool isOwner = await OwnerService.OwnerExistByUserIdAsync(this.User.GetId());
+}
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
 
 	@if (SignInManager.IsSignedIn(User))
 {
+		@if (isAdmin)
+		{
 		<div class="container col-md-5">
 			<ul class="navbar-nav">
 				<!-- menu item -->
@@ -15,18 +27,50 @@
 					</a>
 				</li>
 				<li class="nav-item">
-				<a class="nav-link" asp-controller="Administrator" asp-action="AllDoctors" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link" asp-controller="Administrator" asp-action="AllDoctors" aria-haspopup="true" aria-expanded="false">
 						Лекари
 					</a>
 				</li>
 				<!-- menu item -->
 				<li class="nav-item">
-				<a class="nav-link" asp-controller="Administrator" asp-action="AllTrainers" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link" asp-controller="Administrator" asp-action="AllTrainers" aria-haspopup="true" aria-expanded="false">
 						Треньори
 					</a>
 				</li>
 			</ul>
 		</div>
+		}
+		@if (isOwner)
+		{
+			<div class="container">
+			<!-- logo -->
+				<img src="~/images/logo.png" style="block-size: 80px" alt="ForAnimalsWithLove">
+			<!-- Navbartoggler -->
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggle-icon">
+					<i class="fas fa-bars"></i>
+				</span>
+			</button>
+			<!-- /Navbar toggler -->
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ms-2">
+					<!-- menu item -->
+					<li class="nav-item dropdown">
+						<a class="nav-link dropdown-toggle" id="services-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Нашият екип
+						</a>
+						<div class="dropdown-menu" aria-labelledby="services-dropdown">
+							<a class="dropdown-item" asp-controller="Home" asp-action="TeamVet">Ветеринари</a>
+							<a class="dropdown-item" asp-controller="Home" asp-action="TeamTrainer">Треньори</a>
+						</div>
+					</li>
+				</ul>
+				</div>
+		    </div>
+	
+		}
+
+	
 
 		<ul class="navbar-nav">
 			<li class="nav-item">
