--- a/ForAnimalsWithLove/Views/Owner/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/HealthRecordDetails.cshtml
@@ -8,7 +8,7 @@
 	<div class="page">
 		<div class="container">
 			<div class="row">
-				<div class="col-lg-10">
+				<div class="col-lg-10 center">
 
 					<div class="row bg-light-custom border-irregular1 block-padding text-center">
 
@@ -35,7 +35,6 @@
 						<!-- /col-md -->
 					</div>
 					<hr />
-
 
 
 				</div>
