--- a/ForAnimalsWithLove/Views/Owner/HospitalRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/HospitalRecordDetails.cshtml
@@ -13,15 +13,15 @@
 					<div class="row bg-light-custom border-irregular1 block-padding text-center">
 
 						<div>
-							<h4>Здравно досие</h4>
+							<h4>Болнично досие</h4>
 							<div class="row">
 								<div class="text-center">
 									<ul class="list-unstyled pet-adopt-info">
-										<li class="h7">Микрочип: <span>@Model.Diagnosis</span></li>
-										<li class="h7">Номер на микрочип: <span>@Model.DateOfAcceptance</span></li>
-										<li class="h7">Първа ваксина: <span>@Model.DateOfDischarge</span></li>
-										<li class="h7">Втора ваксина: <span>@Model.Treatment</span></li>
-										<li class="h7">Трета ваксина: <span>@Model.PrescribedTreatment</span></li>
+										<li class="h7">Диагноза: <span>@Model.Diagnosis</span></li>
+										<li class="h7">Дата на прием: <span>@Model.DateOfAcceptance</span></li>
+										<li class="h7">Дата на изписване: <span>@Model.DateOfDischarge</span></li>
+										<li class="h7">Провело се лечение: <span>@Model.Treatment</span></li>
+										<li class="h7">Предписано лечение: <span>@Model.PrescribedTreatment</span></li>
 									</ul>
 								</div>
 								<!-- /div-->
