--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -107,8 +107,8 @@
 							Нашият екип
 						</a>
 						<div class="dropdown-menu" aria-labelledby="services-dropdown">
-							<a class="dropdown-item" asp-controller="Home" asp-action="TeamVet">Ветеринари</a>
-							<a class="dropdown-item" asp-controller="Home" asp-action="TeamTrainer">Треньори</a>
+							<a class="dropdown-item" asp-controller="GenerateHome" asp-action="TeamVet">Ветеринари</a>
+						<a class="dropdown-item" asp-controller="GenerateHome" asp-action="TeamTrainer">Треньори</a>
 						</div>
 					</li>
 					<!-- menu item -->
@@ -125,7 +125,7 @@
 					</li>
 					<!-- menu item -->
 					<li class="nav-item">
-						<a class="nav-link" id="about-dropdown" asp-controller="Home" asp-action="Aboption" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link" id="about-dropdown" asp-controller="GenerateHome" asp-action="Aboption" aria-haspopup="true" aria-expanded="false">
 							Осинови
 						</a>
 					</li>
