change connection in index page

--- a/ForAnimalsWithLove/Views/Home/Index.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Index.cshtml
@@ -64,7 +64,7 @@
                     <!--the div below is hidden on small screens  -->
                     <div class="d-none d-sm-block">
                         <p class="header-p">Виж нашата секция, в която може да намериш всички сладури, които си търсят дом!</p>
-                        <a class="btn btn-primary" asp-controller="Home" asp-action="Aboption">Осинови днес</a>
+                        <a class="btn btn-primary" asp-controller="GenerateHome" asp-action="Aboption">Осинови днес</a>
                     </div>
                     <!--/d-none  -->
                 </div>
@@ -124,7 +124,7 @@
                     <!-- the div below is hidden on small screens  -->
                     <div class="d-none d-sm-block">
                         <p class="header-p">Вашият любимец е в добри ръце с нашите професионални треньори</p>
-                        <a class="btn btn-primary" asp-controller="Home" asp-action="TeamTrainer">Нашият екип</a>
+                        <a class="btn btn-primary" asp-controller="GenerateHome" asp-action="TeamTrainer">Нашият екип</a>
                     </div>
                     <!--/d-none  -->
                 </div>
