--- a/ForAnimalsWithLove/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ForAnimalsWithLove/Areas/Identity/Pages/Account/Register.cshtml
@@ -12,7 +12,7 @@
 <div class="row">
     <div class="col-md-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h3>Създай нов акаунт</h3>
+            <h3>Създай нов акаунт на собственик</h3>
             <hr />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
@@ -31,6 +31,18 @@
                 <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
                 <label asp-for="Input.ConfirmPassword"></label>
                 <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-floating">
+                <input asp-for="Input.FirstName" class="form-control" autocomplete="first-name" aria-required="true" />
+                <label asp-for="Input.FirstName"></label>
+                <span asp-validation-for="Input.FirstName" class="text-danger"></span>
+            </div>
+            <br />
+            <div class="form-floating">
+                <input asp-for="Input.LastName" class="form-control" autocomplete="last-name" aria-required="true" />
+                <label asp-for="Input.LastName"></label>
+                <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
             <br />
             <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Регистрирай ме</button>
