change Error page and css file for footer

--- a/ForAnimalsWithLove/Views/Home/Error404.cshtml
+++ b/ForAnimalsWithLove/Views/Home/Error404.cshtml
@@ -8,16 +8,9 @@
     <!-- ==== Page Content ==== -->
     <div class="page paws-house-bg1">
         <div class="container">
-            <div class="row block-padding">
-                <div class="col-md-5 offset-md-1">
-                    <img src="~/images/404error.jpg" style="height:500px;" alt="error" class="center-block img-fluid float-right">
-                </div>
-                <div class="col-md-6 h-50 border-irregular1  bg-light-custom text-center">
-                    <h1 class="mt-4">404</h1>
-                    <h4>Страницата не е намерена</h4>
-                    <a asp-controller="Home" asp-action="Index" class="btn btn-primary mb-5"> Върни ме в началната страница</a>
-                </div>
-            </div>
+                <img src="~/images/404error.jpg" style="height: 800px; padding-top: 25px;padding-bottom: 25px;" alt="error" class="center-block img-fluid float-right">
+            <a asp-controller="Home" asp-action="Index" class="btn btn-primary col-md-4"> Върни ме в началната страница</a>
+               
             <!-- /container -->
         </div>
     </div>
