--- a/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_Layout.cshtml
@@ -93,7 +93,7 @@
                     <h6><i class="fas fa-envelope margin-icon"></i>Свържи се с нас</h6>
                     <ul class="list-unstyled">
                         <li>0700 12 323</li>
-                        <li>office@foranimalswithlove.bg</a></li>
+                        <li>office@foranimalswithlove.bg</li>
                         <li>Pet Street 123 - Sofia </li>
                     </ul>
                     <!--/ul -->
