--- a/ForAnimalsWithLove/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ForAnimalsWithLove/Areas/Identity/Pages/Account/Login.cshtml
@@ -11,7 +11,7 @@
     </style>
 </head>
 
-<div>
+<div class="row justify-content-center">
     <div class="col-lg-4">
         <section>
             <form id="account" method="post">
