--- a/ForAnimalsWithLove/Areas/Identity/Pages/Account/Register.cshtml
+++ b/ForAnimalsWithLove/Areas/Identity/Pages/Account/Register.cshtml
@@ -9,11 +9,11 @@
 
     </style>
 </head>
-<div class="row">
-    <div class="col-md-4">
+<div class="row justify-content-center">
+    <div class="col-lg-4">
         <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
-            <h3>Създай нов акаунт на собственик</h3>
-            <hr />
+            <h3>Създай акаунт на собственик</h3>
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-floating">
                 <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
