change part of front-end

--- a/ForAnimalsWithLove/Areas/Identity/Pages/Account/Login.cshtml
+++ b/ForAnimalsWithLove/Areas/Identity/Pages/Account/Login.cshtml
@@ -15,7 +15,7 @@
     <div class="col-lg-4">
         <section>
             <form id="account" method="post">
-                <h2>Вход само за клиенти</h2>
+                <h2>Вход</h2>
                 <hr />
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-floating">
