--- a/ForAnimalsWithLove/Views/Trainer/AnimalDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Trainer/AnimalDetails.cshtml
@@ -47,20 +47,12 @@
 			</div>
 			<div class="text-center col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
 			 <div class="text-center">
-				<a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="HealthRecordDetails" asp-route-id="@Model.Id"> Детайли здравно досие</a>
+				<a class="btn btn-primary" asp-area="" asp-controller="Trainer" asp-action="HealthRecordDetails" asp-route-id="@Model.Id"> Детайли здравно досие</a>
 			</div>
 			<div class="text-center">
-				<a class="btn btn-primary" asp-controller="Administrator" asp-action="AddOwner" asp-route-id="@Model.Id">+ Добави собственик</a>
-			</div>
-			<div class="text-center">
-				<a class="btn btn-primary" asp-controller="Administrator" asp-action="AddSearchHome" asp-route-id="@Model.Id">+ Търси дом</a>
-			</div>
-			<div class="text-center">
-				<a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AddGrooming" asp-route-id="@Model.Id"> + Добави Grooming услуги</a>
+				<a class="btn btn-primary" asp-area="" asp-controller="Trainer" asp-action="AddEducation" asp-route-id="@Model.Id"> + Добави обучение</a>
 			</div>		
-			<div class="text-center">
-				<a class="btn btn-primary" asp-area="" asp-controller="Administrator" asp-action="AddBooking" asp-route-id="@Model.Id"> + Добави хотелско настаняване</a>
-			</div>
+			
 		</div>
 	</div>
 	<!-- /page -->
