--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -9,17 +9,18 @@
 	var admin = await AdminService.GetAdminExistByUserIdAsync(this.User.GetId()!);
 
 }
+@inject ITrainerService TrainerService
+@{
+	var isTrainer = await TrainerService.TrainerExistByUserIdAsync(this.User.GetId()!);
+	var trainer = await TrainerService.GetTrainerExistByUserIdAsync(this.User.GetId()!);
+}
 @inject IOwnerService OwnerService
 @{
 	var isOwner = await OwnerService.OwnerExistByUserIdAsync(this.User.GetId()!);
 	var userId = this.User.GetId();
 	var owner = await OwnerService.GetOwnerExistByUserIdAsync(userId!);
 }
-@inject ITrainerService TrainerService
-@{
-	var isTrainer = await TrainerService.TrainerExistByUserIdAsync(this.User.GetId()!);
-	var trainer = await TrainerService.GetTrainerExistByUserIdAsync(this.User.GetId()!);
-}
+
 @{
 	var name = "";
 	if(isAdmin)
@@ -30,7 +31,7 @@
 	{
 		name = owner.FirstName;
 	}
-else if (isTrainer)
+    else if (isTrainer)
 	{
 		name = trainer.FirstName;
 	}
@@ -106,14 +107,14 @@ else if (isTrainer)
 	
 	<ul class="navbar-nav">
 		<li class="nav-item">
-				<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @name!</a>
-			</li>
+				<a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Здравей, @name!</a>
+		</li>
 			<li class="nav-item">
 				<form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
 					<button type="submit" class="nav-link btn btn-link text-dark">Изход</button>
 				</form>
 			</li>
-		</ul>
+	</ul>
 		
 	}
 	else
