--- a/ForAnimalsWithLove/Views/Doctor/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Doctor/HealthRecordDetails.cshtml
@@ -44,7 +44,12 @@
 				<p><b>Общо състояние:</b> @Model.GeneralCondition </p>
 				<p><b>Предписано лечение:</b> @Model.PrescribedTreatment </p>
 			</div>
-			
+			<div class="text-center col-md-10 col-xl-12">
+				<a asp-controller="Doctor" asp-action="AddHospitalRecord" asp-route-id="@Model.Id" class="btn btn-primary"> + Добави болнично досие</a>
+			</div>
+			<div class="text-center col-md-10 col-xl-12">
+				<a asp-controller="Doctor" asp-action="AddMedical" asp-route-id="@Model.Id" class="btn btn-primary"> + Добави преглед</a>
+			</div>
 	</div>
 	</div>
 	<!-- /page -->
