--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -58,7 +58,7 @@
 			<ul class="navbar-nav">
 				<!-- menu item -->
 				<li class="nav-item">
-					<a class="nav-link" asp-controller="Administrator" asp-action="AllAnimals">
+					<a class="nav-link" asp-controller="Administrator" asp-action="AllAnimalsFiltred">
 						Всички клиенти
 					</a>
 				</li>
