Add Search element for animals for doctors and trainers

--- a/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
+++ b/ForAnimalsWithLove/Views/Shared/_LoginPartial.cshtml
@@ -106,7 +106,7 @@
 			<ul class="navbar-nav">
 				<!-- menu item -->
 				<li class="nav-item">
-					<a class="nav-link" asp-controller="Trainer" asp-action="AllAnimals">
+					<a class="nav-link" asp-controller="Trainer" asp-action="AllAnimalsFiltred">
 						Всички клиенти
 					</a>
 				</li>
@@ -119,7 +119,7 @@
 			<ul class="navbar-nav">
 				<!-- menu item -->
 				<li class="nav-item">
-					<a class="nav-link" asp-controller="Doctor" asp-action="AllAnimals">
+					<a class="nav-link" asp-controller="Doctor" asp-action="AllAnimalsFiltred">
 						Всички клиенти
 					</a>
 				</li>
