--- a/ForAnimalsWithLove/Views/_ViewImports.cshtml
+++ b/ForAnimalsWithLove/Views/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using ForAnimalsWithLove;
 @using ForAnimalsWithLove.Data.Models;
 @using ForAnimalsWithLove.ViewModels;
+@using Griesoft.AspNetCore.ReCaptcha
+
+@addTagHelper *, Griesoft.AspNetCore.ReCaptcha
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
