--- a/ForAnimalsWithLove/Views/Doctor/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Doctor/HealthRecordDetails.cshtml
@@ -42,8 +42,17 @@
 				<p><b>Трета ваксина:</b> @Model.ThirdVaccine </p>
 				<p><b>Годишна ваксина:</b> @Model.AnnualVaccine </p>
 				<p><b>Общо състояние:</b> @Model.GeneralCondition </p>
-				<p><b>Предписано лечение:</b> @Model.PrescribedTreatment </p>
 			</div>
+
+			<div class="col-lg-5 res-margin">
+				<div id="accordion" class="accordion-cards">
+					@foreach (var medical in Model.Medicals)
+					{
+						<partial name="_MedicalPartial" model="@medical" />
+					}
+				</div>
+			</div>
+
 			<div class="text-center col-md-10 col-xl-12">
 				<a asp-controller="Doctor" asp-action="AddHospitalRecord" asp-route-id="@Model.Id" class="btn btn-primary"> + Добави болнично досие</a>
 			</div>
