--- a/ForAnimalsWithLove/Views/Owner/HealthRecordDetails.cshtml
+++ b/ForAnimalsWithLove/Views/Owner/HealthRecordDetails.cshtml
@@ -24,8 +24,16 @@
 										<li class="h7">Трета ваксина: <span>@(Model.ThirdVaccine ? "Да" : "Не")</span></li>
 										<li class="h7">Годишна ваксина: <span>@(Model.AnnualVaccine ? "Да" : "Не")</span></li>
 										<li class="h7">Общо състояние: <span>@Model.GeneralCondition</span></li>
-										<li class="h7">Назначено лечение: <span>@Model.PrescribedTreatment</span></li>
 									</ul>
+								</div>
+
+								<div class="col-lg-5 res-margin">
+									<div id="accordion" class="accordion-cards">
+										@foreach (var medical in Model.Medicals)
+										{
+											<partial name="_MedicalPartial" model="@medical" />
+										}
+									</div>
 								</div>
 								<!-- /div-->
 							</div>
