--- a/ForAnimalsWithLove/wwwroot/css/style.css
+++ b/ForAnimalsWithLove/wwwroot/css/style.css
@@ -1282,7 +1282,7 @@ select.form-control {
      background: #fff;
 }
 .accordion-cards .card-header:after {
-	content: "\f077";
+	/*content: "\f077";*/
 	font-weight:900;
 	float:right;
 	display:block;
@@ -1291,9 +1291,9 @@ select.form-control {
 	opacity: 0.7;
 	margin-top: -25px;
 }
-.accordion-cards  .card-header:not(.collapsed):after{
+/*.accordion-cards  .card-header:not(.collapsed):after{
      transform:rotate(180deg);
-}
+}*/
  .accordion-cards .card-header {
      padding: 10px 20px;
      border-radius:5px;
